# sample

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
sample/: __init__.py  dataset.py  features.py  plots.py
sample/modeling/: predict.py  train.py
